--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,10 @@
         <activity
             android:name=".BotonFlotanteTransformacionActivity"
             android:label="@string/title_activity_boton_flotante_transformacion"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".BotonFlotanteMenuActivity"
+            android:label="@string/title_activity_boton_flotante_menu"
             android:theme="@style/AppTheme"></activity>
     </application>
 
